luci-theme-bootstrap: z-index fixes
Lower z-index of header bar to allow tooltips and dropdowns to overlap it,
also increase the z-index of open dropdowns to ensure that they cover
active tooltip bubbles.

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -770,7 +770,7 @@ header {
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 10000;
+	z-index: 800;
 	overflow: visible;
 	color: #BFBFBF;
 }
@@ -1451,7 +1451,7 @@ footer {
 	border: 1px solid #918e8c;
 	box-shadow: 0 0 4px #918e8c;
 	position: absolute;
-	z-index: 1000;
+	z-index: 1100;
 	max-width: none;
 	min-width: 100%;
 	width: auto;
